objects/ssot__OrganizationIncidentSummary__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CategoryId__c</fullName>
        <label>Category</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CorrectiveActionType__c</fullName>
        <label>Corrective Action Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DisclsReportingPeriodId__c</fullName>
        <label>Disclosure Reporting Period</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FineAmount__c</fullName>
        <label>Fine Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__HazardType__c</fullName>
        <label>Hazard Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__HoursWorkedNumber__c</fullName>
        <label>Hours Worked</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Organization Incident Summary Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IncidentCount__c</fullName>
        <label>Incident Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__IncidentSubtypeCode__c</fullName>
        <label>Incident Subtype</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IncidentType__c</fullName>
        <label>Incident Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsWorkRelated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Work Related</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__MonetaryLossAmount__c</fullName>
        <label>Monetary Loss</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PenaltyType__c</fullName>
        <label>Penalty Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SubsidiaryAccount__c</fullName>
        <label>Subsidiary Account</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1747383584569_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OrganizationIncidentSummary_DisclsRe_rel</label>
        <referenceTo>ssot__DisclosureReportingPeriod__dlm</referenceTo>
        <relationshipLabel>OrganizationIncidentSummary_DisclsRe_rel</relationshipLabel>
        <relationshipName>rel_1747383584569_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1747383587767_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OrganizationIncidentSummary_Subsidia_rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>OrganizationIncidentSummary_Subsidia_rel</relationshipLabel>
        <relationshipName>rel_1747383587767_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>